# W9/generated_code/openapi_server/models/__init__.py
@@ -19,4 +19,3 @@ from openapi_server.models.post_api_users_by_id_addresses201_response_address im
 from openapi_server.models.post_api_users_by_id_addresses_request import PostApiUsersByIdAddressesRequest
 from openapi_server.models.post_api_users_by_id_addresses_request_is_default import PostApiUsersByIdAddressesRequestIsDefault
 from openapi_server.models.post_api_users_request import PostApiUsersRequest
-from openapi_server.models.post_api_users_request_dob import PostApiUsersRequestDob
