# W9/generated_code/openapi_server/models/patch_api_users_by_id_request.py
@@ -3,10 +3,8 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
-from openapi_server.models.post_api_users_request_dob import PostApiUsersRequestDob
 from openapi_server import util
 
-from openapi_server.models.post_api_users_request_dob import PostApiUsersRequestDob  # noqa: E501
 
 class PatchApiUsersByIdRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -26,14 +24,14 @@ class PatchApiUsersByIdRequest(Model):
         :param last_name: The last_name of this PatchApiUsersByIdRequest.  # noqa: E501
         :type last_name: str
         :param dob: The dob of this PatchApiUsersByIdRequest.  # noqa: E501
-        :type dob: PostApiUsersRequestDob
+        :type dob: date
         """
         self.openapi_types = {
             'email': str,
             'username': str,
             'first_name': str,
             'last_name': str,
-            'dob': PostApiUsersRequestDob
+            'dob': date
         }
 
         self.attribute_map = {
@@ -158,22 +156,22 @@ class PatchApiUsersByIdRequest(Model):
         self._last_name = last_name
 
     @property
-    def dob(self) -> PostApiUsersRequestDob:
+    def dob(self) -> date:
         """Gets the dob of this PatchApiUsersByIdRequest.
 
 
         :return: The dob of this PatchApiUsersByIdRequest.
-        :rtype: PostApiUsersRequestDob
+        :rtype: date
         """
         return self._dob
 
     @dob.setter
-    def dob(self, dob: PostApiUsersRequestDob):
+    def dob(self, dob: date):
         """Sets the dob of this PatchApiUsersByIdRequest.
 
 
         :param dob: The dob of this PatchApiUsersByIdRequest.
-        :type dob: PostApiUsersRequestDob
+        :type dob: date
         """
 
         self._dob = dob
