# W9/generated_code/openapi_server/models/post_api_users_request.py
@@ -3,10 +3,8 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
-from openapi_server.models.post_api_users_request_dob import PostApiUsersRequestDob
 from openapi_server import util
 
-from openapi_server.models.post_api_users_request_dob import PostApiUsersRequestDob  # noqa: E501
 
 class PostApiUsersRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -28,7 +26,7 @@ class PostApiUsersRequest(Model):
         :param last_name: The last_name of this PostApiUsersRequest.  # noqa: E501
         :type last_name: str
         :param dob: The dob of this PostApiUsersRequest.  # noqa: E501
-        :type dob: PostApiUsersRequestDob
+        :type dob: date
         """
         self.openapi_types = {
             'email': str,
@@ -36,7 +34,7 @@ class PostApiUsersRequest(Model):
             'password': str,
             'first_name': str,
             'last_name': str,
-            'dob': PostApiUsersRequestDob
+            'dob': date
         }
 
         self.attribute_map = {
@@ -196,22 +194,22 @@ class PostApiUsersRequest(Model):
         self._last_name = last_name
 
     @property
-    def dob(self) -> PostApiUsersRequestDob:
+    def dob(self) -> date:
         """Gets the dob of this PostApiUsersRequest.
 
 
         :return: The dob of this PostApiUsersRequest.
-        :rtype: PostApiUsersRequestDob
+        :rtype: date
         """
         return self._dob
 
     @dob.setter
-    def dob(self, dob: PostApiUsersRequestDob):
+    def dob(self, dob: date):
         """Sets the dob of this PostApiUsersRequest.
 
 
         :param dob: The dob of this PostApiUsersRequest.
-        :type dob: PostApiUsersRequestDob
+        :type dob: date
         """
 
         self._dob = dob
